apps/teams/team-product/api/argo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      guestbook.mydomain.com/app: guestbook-ui
  template:
    metadata:
      labels:
        guestbook.mydomain.com/app: guestbook-ui
        guestbook.mydomain.com/version: "0.2"
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
          name: guestbook-ui
          ports:
            - containerPort: 80
              protocol: TCP
  strategy:
    canary:
      stableMetadata:
        labels:
          argo-rollouts/version: stable
      canaryMetadata:
        labels:
          argo-rollouts/version: canary
      steps:
        - setHeaderRoute:
            name: header-version
            match:
              - headerName: x-version
                headerValue:
                  exact: "0.2"
        - setWeight: 10
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 1m
        - setWeight: 100
        - pause:
            duration: 30s
      trafficRouting:
        managedRoutes:
          - name: header-version
        istio:
          virtualService:
            name: guestbook-ui
            routes:
              - primary
          destinationRule:
            name: guestbook-ui
            stableSubsetName: stable
            canarySubsetName: canary
