apps/teams/team-product/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  ports:
  - port: 9080
    targetPort: 9080
  selector:
    guestbook.mydomain.com/app: guestbook-ui
