apps/teams/team-product/api/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: guestbook-ui
spec:
  host: guestbook-ui
  subsets:
    - name: stable
      labels:
        guestbook.mydomain.com/app: guestbook-ui
    - name: canary
      labels:
        guestbook.mydomain.com/app: guestbook-ui
